Format math blocks to be on separate lines for correct rendering

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -149,9 +149,13 @@ First, introduce the definition.
 > The set $\mathcal{C}$ is called **forward invariant** if for every $x_0\in\mathcal{C}$, $x(t)\in\mathcal{C}$ for $x(0)=x_0$ and all $t\in \left[0,\tau_\max\right)$. The system is called **safe** w.r.t. $\mathcal{C}$ if the safe set $\mathcal{C}=\{x\in D:h(x)\geq 0\}$ of the system is forward invariant.
 
 ##### Def 1.6) First version of Control Barrier Function
-> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
+> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. 
+>
+> $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
 > 
-> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that $$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
+> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that 
+>
+> $$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
 > 
 
 
