Fix formatting of mathematical expression in CBF.md

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -158,7 +158,7 @@ First, introduce the definition.
 > $$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
 > 
 
-
+$$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
 
 ---
 
