Update header levels and fix formatting in CBF document

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -9,12 +9,12 @@ categories: study
 
 Control Barrier Function is one of the most popular methods of 'Safety Control'.
 
-This documents mainly refers to 'Control Barrier Functions: Theory and Applications (2019)' and includes additional explanations from other references.
+This document mainly refers to 'Control Barrier Functions: Theory and Applications (2019)' and includes additional explanations from other references.
 
 
-## 1. Introduction
+### 1. Introduction
 
-### 1.1. Motivation
+#### 1.1. Motivation
 
 - **Intuition of Liveness & Safety**
 	- **Liveness:** "Good" things eventually happen. (ex: Asymptotic Stability)
@@ -34,13 +34,13 @@ This documents mainly refers to 'Control Barrier Functions: Theory and Applicati
 
 <div style="height: 0.1em;"></div> 
 
-### 1.2. A Brief History of Barrier Functions
+#### 1.2. A Brief History of Barrier Functions
 
 As we mentioned above, our major concern in safety control is **invariance**- ensuring that the system states remain within a predefined safe set.
 
 First, introduce a definition of safe set.
 
-##### Def 1.1) Safe set
+###### Def 1.1) Safe set
 
 > Given a smooth function $h:\R^n\to\R$, a safe set $\mathcal{C}$ is a superlevel set
 > 
@@ -50,11 +50,11 @@ First, introduce a definition of safe set.
 
 Here, he boundary condition is required to guarantee that the boundary $\pp\mathcal{C}$ be smooth $(n-1)$-dimensional manifold.
 
-#### 1.2.1. Bony-Brezis theorem
+##### 1.2.1. Bony-Brezis theorem
 
 One of the most monumental theorem is a **Bony-Brezis theorem (also called Nagumo's theorem)**, that gives necessary and sufficient conditions for set invariance.
 
-##### Thm 1.2) Bony-Brezis theorem
+###### Thm 1.2) Bony-Brezis theorem
 > 
 > Let $F$ be closed subset of a $C^2$ manifold $M$ and let $X$ be a vector field on $M$ which is Lipschitz continuous. Then, TFAE:
 > 1. Every integral curve of $X$ starting in $F$ remains in $F$.
@@ -86,11 +86,11 @@ Here, $\dot h(x)=\frac{dh}{dt}=\frac{\pp h}{\pp x}\frac{dx}{dt}=\frac{\pp h}{\pp
 <div style="height: 0.1em;"></div>
 
 
-#### 1.2.2. Barrier Certificates
+##### 1.2.2. Barrier Certificates
 
 Barrier Certificates was introduced to formally prove safety of nonlinear and hybrid systems.
 
-##### Def 1.3) Barrier Certificates
+###### Def 1.3) Barrier Certificates
 > 
 > Let $\mathcal{C_0}$ be the set of initial conditions and $\mathcal{C}_u$ be an unsafe set.  Then, a function $B:\R^n\to R$ is called a **barrier certificate** if
 > 1. $B(x)\leq 0$ for all $x\in \mathcal{C}_0$
@@ -101,11 +101,11 @@ Here, by letting $h=-B$, the $h$ in the Bony-Brezis theorem corresponds to the r
 
 <div style="height: 0.1em;"></div>
 
-#### 1.2.3. Barrier Lyapunov Functions
+##### 1.2.3. Barrier Lyapunov Functions
 
 To extend the safety guarantees beyond the boundary of the set, a various "Lyapunov-like" approaches were introduced.
 
-##### Def 1.4) Barrier Lyapunov functions
+###### Def 1.4) Barrier Lyapunov functions
 
 >Let $\mathcal{C_0}$ be the set of initial conditions and $\mathcal{C}_u$ be an unsafe set.  Then, a function $B:\R^n\to R$ is called a **barrier Lyapunov function** if
 > 1. $B(x)\leq 0$ for all $x\in \mathcal{C}_0$
@@ -137,7 +137,7 @@ Then, $\dot B(x)\leq 0$ be satisfied for all $x\in \mathcal{C}$.
 
 <div style="height: 0.1em;"></div>
 
-#### 1.2.4. Open Dynamical Systems
+##### 1.2.4. Open Dynamical Systems
 
 Early work, such as Bony-Brezis theorem or Barrier Certificates, focused on **closed systems** $(\dot x=f(x))$, which was more about **analysis and verification(not control)** of existing dynamics.
 
@@ -147,11 +147,11 @@ In this paradigm, the barrier certificate was extended to the first definition o
 
 First, introduce the definition.
 
-##### Def 1.5) Forward invariant set, Safe system
+###### Def 1.5) Forward invariant set, Safe system
 
 > The set $\mathcal{C}$ is called **forward invariant** if for every $x_0\in\mathcal{C}$, $x(t)\in\mathcal{C}$ for $x(0)=x_0$ and all $t\in \left[0,\tau_\max\right)$. The system is called **safe** w.r.t. $\mathcal{C}$ if the safe set $\mathcal{C}=\{x\in D:h(x)\geq 0\}$ of the system is forward invariant.
 
-##### Def 1.6) First version of Control Barrier Function
+###### Def 1.6) First version of Control Barrier Function
 > Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. 
 >
 > $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
@@ -162,9 +162,9 @@ First, introduce the definition.
 
 ---
 
-### 2. Foundations of Control Barrier Functions
+#### 2. Foundations of Control Barrier Functions
 
 
-#### 2.1. Motivation: Control Lyapunov Functions
+##### 2.1. Motivation: Control Lyapunov Functions
 
-#### 2.2. Control Barrier Functions
+##### 2.2. Control Barrier Functions
