--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -251,11 +251,15 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 ##### Def 2.2) Control Lyapunov Function, Set of all stabilizing controllers
 
 > A positive definite function $V:D\to \R_{\geq 0}$ is a **Control Lyapunov Function** if it satisfies the following condition
-> $$\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq \gamma(V(x))$$
+> $$
+> \inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq \gamma(V(x))
+> $$
 > where $\gamma:\R_{\ge0}\to\R_{\ge 0}$ is a class $\mathcal{K}$ function.
 > 
 > This definition allows us to define the **set of all valid control inputs** that stabilize the system for every point $x\in D$:
-> $$K_{\text{clf}}(x):=\{u\in U: L_fV(x)+L_gV(x)u\leq -\gamma(V(x))\}\q\cdots\q(**)$$
+> $$
+> K_{\text{clf}}(x):=\{u\in U: L_fV(x)+L_gV(x)u\leq -\gamma(V(x))\}\q\cdots\q(**)
+> $$
 
 > [!note] Key insight: Affine constraint
 > 
@@ -271,7 +275,9 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 > If $L_gV(x)=0$, i.e. uncontrollable, then $K_\text{clf}(x)\neq \varnothing$.
 
 **Proof)** Since $V$ is a CLF, this satisfies that
-$$\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq -\gamma(V(x))$$
+$$
+\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq -\gamma(V(x))
+$$
 Here, if $L_gV(x)=0$, then the argument of infimum, $L_fV(x)$, is no longer $u$-dependent and hence 
 $$\inf_{u\in U}[L_fV(x)]=L_fV(x)\leq -\gamma(V(x))$$
 Recall that $K_\text{clf}=\{u\in U: L_fV(x)+0\cdot u\leq-\gamma(V(x)) \}$. 
