--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -44,7 +44,10 @@ First, introduce a definition of safe set.
 
 ##### Def 1.1) Safe set
 
-> Given a smooth function $h:\R^n\to\R$, a safe set $\mathcal{C}$ is a superlevel set $$\mathcal{C}=\{x\in\R^n:h(x)\geq 0\}$$
+> Given a smooth function $h:\R^n\to\R$, a safe set $\mathcal{C}$ is a superlevel set 
+> $$
+> \mathcal{C}=\{x\in\R^n:h(x)\geq 0\}
+> $$
 > satisfying $\del h(x)=\frac{\pp h}{\pp x}(x)\neq0$ for all $x\in\pp \mathcal{C}=\{x\in\R^n:h(x)=0\}$.
 
 Here, he boundary condition is required to guarantee that the boundary $\pp\mathcal{C}$ be smooth $(n-1)$-dimensional manifold.
@@ -153,9 +156,15 @@ First, introduce the definition.
 > The set $\mathcal{C}$ is called **forward invariant** if for every $x_0\in\mathcal{C}$, $x(t)\in\mathcal{C}$ for $x(0)=x_0$ and all $t\in \left[0,\tau_\max\right)$. The system is called **safe** w.r.t. $\mathcal{C}$ if the safe set $\mathcal{C}=\{x\in D:h(x)\geq 0\}$ of the system is forward invariant.
 
 ##### Def 1.6) First version of Control Barrier Function
-> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
+> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. 
+> $$
+> \mathcal{C}=\{x\in D:h(x)\geq 0\}
+> $$
 > 
-> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that $$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
+> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that 
+> $$
+> \dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}
+> $$
 
 This definition essentially demanded that the safety measure $h(x)$ never decrease, enforcing the system to **"stay away" or "move away" from the boundary at all times.**
 
@@ -226,6 +235,7 @@ In a nonlinear context, this can be achieved equivalently ==finding a feedback c
 This can be formally stated as:
 
 > [!note] Asymptotically stabilizable system
+>
 > If 
 > $$\exists u=k(x)\q\text{s.t.}\q \dot V(x, k(x))\leq -\gamma(V(x))\q\cdots\q(\dagger)$$
 > where 
@@ -305,6 +315,7 @@ Using control Lyapunov functions as motivation, we wish to generalize to the con
 The **"overly restrictive"** issue for BLF again occurs in CLF.
 
 > [! note] Limitation of CLF
+>
 > **- The following argument is almost same to that of BLF.**
 > 
 > Let $\Omega_c=\{x(t):V(x(t))\leq c\}\subset \mathcal{C}$ is a sublevel set of $V$. 
@@ -339,7 +350,10 @@ This motivates the formulation of Control Barrier Functions. Let's begin with a 
 > This definition allows us to define the **set of all safe controllers** that render $\mathcal{C}$ safe:
 > $$K_\text{cbf}(x)=\{u\in U:L_fh(x)+L_gh(x)u+\al h(x)\geq 0\}$$
 
-Here, $$\dot h(x,u)=\frac{\pp h}{\pp x}\frac{dx}{dt}=\frac{\pp h}{\pp x}\left(f(x)+g(x)u\right)=\underbrace{\frac{\pp h}{\pp x}f(x)}_{L_f h(x)}+\underbrace{\frac{\pp h}{\pp x}g(x)}_{L_g h(x)}u=L_fh(x)+L_gh(x)u$$
+Here, 
+$$
+\dot h(x,u)=\frac{\pp h}{\pp x}\frac{dx}{dt}=\frac{\pp h}{\pp x}\left(f(x)+g(x)u\right)=\underbrace{\frac{\pp h}{\pp x}f(x)}_{L_f h(x)}+\underbrace{\frac{\pp h}{\pp x}g(x)}_{L_g h(x)}u=L_fh(x)+L_gh(x)u
+$$
 and hence CBF can be rewritten as $\sup_{u\in U}\dot h(x,u)\geq -\al((h(x)))$.
 
 > [!note] Why $\al$ is extended $\mathcal{K}_\infty$ function?
@@ -413,6 +427,7 @@ Suppose that we have a nominal feedback controller $u=k(x)$.
 
 To acheive such a goal, we can construct a QP problem.
 > [!note] Safe-Critical QP (CBF-QP)
+>
 > $$
 > \begin{aligned}
 > u^*(x) &=\underset{u\in\R^m}{\arg\min} \frac{1}{2}\lnm u-k(x) \rnm^2\\[1.4ex]
@@ -444,6 +459,7 @@ $$
 To resolve this, we need to introduce a relaxation variable $\delta$.
 
 > [!note] Safety-Stability QP (CBF-CLF QP)
+>
 > $$
 > \begin{aligned}
 > u^*&(x) =\underset{u\in\R^m}{\arg\min}\left[\frac{1}{2}u^\T H(x) u + p\delta^2\right]\\[1.5ex]
@@ -484,12 +500,20 @@ Specifically, most of the actuators have their own **physical limitations** we n
 Recall the definition of <u>safe set</u>:
 $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
 
-In some ideal cases, it may possible to take $h(x)=\rho(x)$, i.e. $$\forall x\in A,\;\exists u\in U\q\text{s.t.}\q\dot\rho(x,u)\geq -\al(\rho(x))$$ Then, $\mathcal{C}=A$ and hence $A$ is forward invariant itself as well.
+In some ideal cases, it may possible to take $h(x)=\rho(x)$, i.e. 
+$$
+\forall x\in A,\;\exists u\in U\q\text{s.t.}\q\dot\rho(x,u)\geq -\al(\rho(x))
+$$ 
+Then, $\mathcal{C}=A$ and hence $A$ is forward invariant itself as well.
 
 However, forward invariance of $A$ cannot be achieved in general because:
 > [!example] Example) Invariance violation of $A$
+>
 > - **Case 1) Insufficient actuation limit**
-> 	- In many cases, $U$ is defined by $$U=\{u\in\R^m:\lnm u\rnm\leq u_\max\}$$
+> 	- In many cases, $U$ is defined by 
+> 	$$
+> 	U=\{u\in\R^m:\lnm u\rnm\leq u_\max\}
+> 	$$
 > 	- $\rho=h$ implies that $\rho$ is CBF and hence $A$ is forward invariant. So, by the definition of the set of all safe controllers([[#Def 2.4) Modern definition of Control Barrier Functions, Set of all safe controllers|definition 2.4]]), the set of control inputs that render $A$ invariant is
 > 	$$K_{\rho}(x)=\{u\in \R^m: L_f\rho(x)+L_g\rho(x)u\geq-\al(\rho(x))\}$$
 > 	- However, $K_\rho(x)\cap U=\varnothing$ for some $x\in A$.
@@ -532,10 +556,13 @@ First, introduce a definition.
 > For any $t\geq 0$ and $x\in D$, the **nominal trajectory** $\phi_\be(t,x):\R_{\ge0}\times D\to D$ is defined by  the state of the control system $(*)$ at time $t$ when the nominal controller $\be$ is used as input and the system is initialized to $x$.
 > 
 > So, $\phi_\be(t,x)$ satisfies 
-> $$\dot\phi_\be(t,x)=f(\phi_\be(t,x))+g(\phi_\be(t,x))\be(\phi_\be(t,x))$$
+> $$
+> \dot\phi_\be(t,x)=f(\phi_\be(t,x))+g(\phi_\be(t,x))\be(\phi_\be(t,x))
+> $$
 > with initial condition $\phi_\be(0,x)=x$.
 
 > [!warning] Warning
+>
 > **These are NOT general definitions in control theory**. They are just adopted to construct CBF in this context.
 
 <div style="height: 0.1em;"></div>
@@ -547,7 +574,9 @@ Now, the following theorem provides the way to construct a CBF satisfying $\math
 > Also, let $\be(x)$ be a nominal controller s.t. $f(x)+g(x)\be(x)$ is continuously differentiable.
 > 
 > Define $h:D\to\R$ as
-> $$h(x):=\inf_{\tau\in[0,\infty)}\rho(\phi_\be(\tau,x))$$
+> $$
+> h(x):=\inf_{\tau\in[0,\infty)}\rho(\phi_\be(\tau,x))
+> $$
 > and define $\mathcal{C}:=\{x\in D:h(x)\geq 0\}$.
 > 
 > Suppose that for each $x$ there exists a unique $x^*$ s.t. $h(x)=\rho(x^*)$ and $\phi_\be(\tau,x)=x^*$ for some $\tau\geq 0$. Then,
@@ -574,7 +603,9 @@ To overcome this issue, another approach is introduced.
 ##### Def 3.4) SOS polynomial
 
 > A polynomial $s(x)$ is called a sums of squares (SOS) polynomial if there exists a family  of polynomials $\{g_i(x)\}_{i\in [r]}$ s.t. 
-> $$s(x)\sum_{i= 1}^r(g_i(x))^2$$
+> $$
+> s(x)\sum_{i= 1}^r(g_i(x))^2
+> $$
 > Also, $\Sigma[x]$ denotes the set of all SOS polynomials.
 
 Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree polynomial and use SOS programming to enforce the required conditions on $h$.
@@ -597,7 +628,9 @@ Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree p
 > **Claim 1:** If $(1)$, then $\mathcal{C}\subset A$.
 > 
 > **Proof)** Suppose that $-h(x)-\varepsilon+s_1(x)\rho(x)\in\Sigma[x]$. Then, $\exists\sigma(x)\in\Sigma[x]$ s.t. 
-> $$-h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)$$
+> $$
+> -h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)
+> $$
 > Since $\sigma(x)$ is SOS, $\sigma(x)\geq 0$ for all $x\in D$ and hence we have
 > $$
 > -h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)\geq 0\\[1.2ex]
@@ -616,7 +649,9 @@ Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree p
 > **Claim 2:** If $(2)$, then $\be(x)\in K_\text{cbf}(x)$.
 > 
 > **Proof)** Suppose that $L_fh(x)+L_gh(x)\be(x)+ah(x)-s_2(x)h(x)\in\Sigma[x]$, i.e. $\exists\sigma(x)\in\Sigma[x]$ s.t. 
-> $$\underbrace{L_fh(x)+L_gh(x)\be(x)}_{\dot h(x,\be(x))}+\underbrace{ah(x)}_{\al(h(x))}-\underbrace{s_2(x)h(x)}_{\text{relaxation}}=\sigma(x)\geq 0$$
+> $$
+> \underbrace{L_fh(x)+L_gh(x)\be(x)}_{\dot h(x,\be(x))}+\underbrace{ah(x)}_{\al(h(x))}-\underbrace{s_2(x)h(x)}_{\text{relaxation}}=\sigma(x)\geq 0
+> $$
 > Here, as we can see above, 
 > - The first two terms $L_fh(x)+L_gh(x)\be(x)$ is the time derivative of $h$ when the nominal controller $\be(x)$ is applied, i.e. $\dot h(x,\be(x))$.
 > - The third term $ah(x)$ is $\al(h(x))$ where $\al(\cdot)\in\mathcal{K}_\infty$ is linear, i.e. $\al(s)=as$.
@@ -730,7 +765,10 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 > 1 & \mathbf{0}_{r-1}^\T
 > \end{bmatrix}\in\R^{r}
 > $$
-> Also, by assuming a state-feedback controller $\mu=-K_\al\eta_b(x)$, then we $$h(x(t))=Ce^{(F-GK_\al)}\eta_b(x_0)$$
+> Also, by assuming a state-feedback controller $\mu=-K_\al\eta_b(x)$, then we 
+> $$
+> h(x(t))=Ce^{(F-GK_\al)}\eta_b(x_0)
+> $$
 > 
 > ---
 > **Proof)** First, by multiplying two matrices,
