Improve formatting and clarity of mathematical definitions
Refactor mathematical definitions and theorems for clarity and consistency in the Control Barrier Function context.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -44,10 +44,10 @@ First, introduce a definition of safe set.
 
 ##### Def 1.1) Safe set
 
-> Given a smooth function $h:\R^n\to\R$, a safe set $\mathcal{C}$ is a superlevel set 
-> $$
-> \mathcal{C}=\{x\in\R^n:h(x)\geq 0\}
-> $$
+> Given a smooth function $h:\R^n\to\R$, a safe set $\mathcal{C}$ is a superlevel set
+> 
+> $$\mathcal{C}=\{x\in\R^n:h(x)\geq 0\}$$
+> 
 > satisfying $\del h(x)=\frac{\pp h}{\pp x}(x)\neq0$ for all $x\in\pp \mathcal{C}=\{x\in\R^n:h(x)=0\}$.
 
 Here, he boundary condition is required to guarantee that the boundary $\pp\mathcal{C}$ be smooth $(n-1)$-dimensional manifold.
@@ -156,15 +156,13 @@ First, introduce the definition.
 > The set $\mathcal{C}$ is called **forward invariant** if for every $x_0\in\mathcal{C}$, $x(t)\in\mathcal{C}$ for $x(0)=x_0$ and all $t\in \left[0,\tau_\max\right)$. The system is called **safe** w.r.t. $\mathcal{C}$ if the safe set $\mathcal{C}=\{x\in D:h(x)\geq 0\}$ of the system is forward invariant.
 
 ##### Def 1.6) First version of Control Barrier Function
-> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e. 
-> $$
-> \mathcal{C}=\{x\in D:h(x)\geq 0\}
-> $$
+> Consider a control system $\dot x(t)=f(x)+g(x)u$ and a safe set $\mathcal{C}\subset D\subset\R^n$ defined as the superlevel set of a continuously differentiable function $h:D\to \R$, i.e.
 > 
-> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that 
-> $$
-> \dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}
-> $$
+> $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
+> 
+> Then, the function $h$ is a **control barrier function** if for all $x\in\mathcal{C}$, there exists a control input $u\in U$ such that
+> 
+> $$\dot h(x,u)\geq 0\;\Longrightarrow\;\mathcal{C}\;\text{ is forward invariant}$$
 
 This definition essentially demanded that the safety measure $h(x)$ never decrease, enforcing the system to **"stay away" or "move away" from the boundary at all times.**
 
@@ -236,12 +234,14 @@ This can be formally stated as:
 
 > [!note] Asymptotically stabilizable system
 >
-> If 
+> If
+> 
 > $$\exists u=k(x)\q\text{s.t.}\q \dot V(x, k(x))\leq -\gamma(V(x))\q\cdots\q(\dagger)$$
-> where 
-> $$
-> \dot V(x,k(x))=L_fV(x)+L_gV(x)k(x)
-> $$
+> 
+> where
+> 
+> $$\dot V(x,k(x))=L_fV(x)+L_gV(x)k(x)$$
+> 
 > and $\gamma:\R_{\ge0}\to\R_{\ge 0}$ is a class $\mathcal{K}$ function,
 > 
 > then the system $(*)$ is **asymptotically stabilizable** to $V(x^*)=0$, i.e. $x^*=0$.
@@ -261,15 +261,14 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 ##### Def 2.2) Control Lyapunov Function, Set of all stabilizing controllers
 
 > A positive definite function $V:D\to \R_{\geq 0}$ is a **Control Lyapunov Function** if it satisfies the following condition
-> $$
-> \inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq \gamma(V(x))
-> $$
+> 
+> $$\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq \gamma(V(x))$$
+> 
 > where $\gamma:\R_{\ge0}\to\R_{\ge 0}$ is a class $\mathcal{K}$ function.
 > 
 > This definition allows us to define the **set of all valid control inputs** that stabilize the system for every point $x\in D$:
-> $$
-> K_{\text{clf}}(x):=\{u\in U: L_fV(x)+L_gV(x)u\leq -\gamma(V(x))\}\q\cdots\q(**)
-> $$
+> 
+> $$K_{\text{clf}}(x):=\{u\in U: L_fV(x)+L_gV(x)u\leq -\gamma(V(x))\}\q\cdots\q(**)$$
 
 > [!note] Key insight: Affine constraint
 > 
@@ -285,11 +284,13 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 > If $L_gV(x)=0$, i.e. uncontrollable, then $K_\text{clf}(x)\neq \varnothing$.
 
 **Proof)** Since $V$ is a CLF, this satisfies that
-$$
-\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq -\gamma(V(x))
-$$
+
+$$\inf_{u\in U}[L_fV(x)+L_gV(x)u]\leq -\gamma(V(x))$$
+
 Here, if $L_gV(x)=0$, then the argument of infimum, $L_fV(x)$, is no longer $u$-dependent and hence 
+
 $$\inf_{u\in U}[L_fV(x)]=L_fV(x)\leq -\gamma(V(x))$$
+
 Recall that $K_\text{clf}=\{u\in U: L_fV(x)+0\cdot u\leq-\gamma(V(x)) \}$. 
 Since this inequality is independent of $u$, **any $u$ in the admissible set $U$** satisfies the condition.
 
@@ -299,8 +300,10 @@ Since this inequality is independent of $u$, **any $u$ in the admissible set $U$
 These arguments can be generalized by the following theorem.
 
 ##### Thm 2.3) Stabilization Theorem
-> For the nonlinear control system 
+> For the nonlinear control system
+> 
 > $$\dot x=f(x)+g(x)u$$
+>
 > , if there exists a control Lyapunov function $V:D\to\R_{\geq 0}$, then any Lipschitz continuous feedback controller $u(x)\in K_{\text{clf}}(x)$ asymptotically stabilizes the system to $x^*=0$.
 
 <div style="height: 0.1em;"></div>
@@ -342,18 +345,23 @@ This motivates the formulation of Control Barrier Functions. Let's begin with a 
 ##### Def 2.4) Modern definition of Control Barrier Functions, Set of all safe controllers
 
 > Let $\mathcal{C}\subset D\subset\R^n$ be the superlevel set of a continuously differentiable function $h:D\to \R$, i.e.
+> 
 > $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
+> 
 > Then, $h$ is called a **control barrier function** if there exists an extended class $\mathcal{K}_\infty$ function $\al$ such that, for the control system $(*)$,
+> 
 > $$\sup_{u\in U}\left[L_fh(x)+L_gh(x)u\right]\geq-\al(h(x))$$
+> 
 > for all $x\in D$.
 > 
 > This definition allows us to define the **set of all safe controllers** that render $\mathcal{C}$ safe:
+> 
 > $$K_\text{cbf}(x)=\{u\in U:L_fh(x)+L_gh(x)u+\al h(x)\geq 0\}$$
 
 Here, 
-$$
-\dot h(x,u)=\frac{\pp h}{\pp x}\frac{dx}{dt}=\frac{\pp h}{\pp x}\left(f(x)+g(x)u\right)=\underbrace{\frac{\pp h}{\pp x}f(x)}_{L_f h(x)}+\underbrace{\frac{\pp h}{\pp x}g(x)}_{L_g h(x)}u=L_fh(x)+L_gh(x)u
-$$
+
+$$\dot h(x,u)=\frac{\pp h}{\pp x}\frac{dx}{dt}=\frac{\pp h}{\pp x}\left(f(x)+g(x)u\right)=\underbrace{\frac{\pp h}{\pp x}f(x)}_{L_f h(x)}+\underbrace{\frac{\pp h}{\pp x}g(x)}_{L_g h(x)}u=L_fh(x)+L_gh(x)u$$
+
 and hence CBF can be rewritten as $\sup_{u\in U}\dot h(x,u)\geq -\al((h(x)))$.
 
 > [!note] Why $\al$ is extended $\mathcal{K}_\infty$ function?
@@ -386,11 +394,11 @@ and hence CBF can be rewritten as $\sup_{u\in U}\dot h(x,u)\geq -\al((h(x)))$.
 
 As we can see, this definition is quite analogous to that of CLF and set of all stabilizing controllers. So, similar results follows as well.
 
-##### Thm 2.4) Safety guarantee via CBFs (sufficiency for safety)
+##### Thm 2.5) Safety guarantee via CBFs (sufficiency for safety)
 > Let $\mathcal{C}\subset\R^n$ be a set defined as the superlevel set of a continuously differentiable function $h:D\to\R$. 
 > If $h$ is a control barrier function on $D$ and $\frac{\pp h}{\pp x}(x)\neq 0$ for all $x\in\pp C$, then any Lipschitz continuous controller $u(x)\in K_\text{cbf}$ for the system $(*)$ renders the set $\mathcal{C}$ safe. Additionally, the set $\mathcal{C}$ is asymptotically stable in $D$.
 
-##### Thm 2.5) Necessity for safety
+##### Thm 2.6) Necessity for safety
 
 > Let $\mathcal{C}$ be a compact set that is the superlevel set of a continuously differentiable function $h:D\to\R$ where $\frac{\pp h}{\pp x}(x)\neq0$ for all $x\in\pp \mathcal{C}$. 
 > If there exists a control law $u=k(x)$ that renders $\mathcal{C}$ safe, i.e. $\mathcal{C}$ is forward invariant with respect to $\dot x=f(x)+g(x)k(x)$, then $h|_\mathcal{C}:\mathcal{C}\to\R$ is a control barrier function on $\mathcal{C}$.
@@ -399,12 +407,11 @@ As we can see, this definition is quite analogous to that of CLF and set of all 
 <div style="height: 0.1em;"></div>
 
 In short, 
-$$
-\begin{aligned}
+
+$$\begin{aligned}
 \text{Theorem 2.4)}& \q h\; \text{ is CBF } \Longrightarrow  u\in K_\text{cbf}\; \text{ makes }\; \mathcal{C}\; \text{safe}. \q\q(\text{Sufficiency})\\
 \text{Theorem 2.5)}& \q \exists u\; \text{ makes }\; \mathcal{C}\; \text{ safe } \Longrightarrow h|_\mathcal{C}\; \text{ is CBF} \q\q\q\q(\text{Necessity}).
-\end{aligned}
-$$
+\end{aligned}$$
 the theorem 2.4 states the sufficient condition for $\mathcal{C}$ to be safe and the theorem 2.5 states the necessary condition for $\mathcal{C}$ to be safe.
 
 <div style="height: 0.1em;"></div>
@@ -428,12 +435,10 @@ Suppose that we have a nominal feedback controller $u=k(x)$.
 To acheive such a goal, we can construct a QP problem.
 > [!note] Safe-Critical QP (CBF-QP)
 >
-> $$
-> \begin{aligned}
+> $$\begin{aligned}
 > u^*(x) &=\underset{u\in\R^m}{\arg\min} \frac{1}{2}\lnm u-k(x) \rnm^2\\[1.4ex]
 > &\text{s.t.}\q L_fh(x)+L_gh(x)u\geq -\al(h(x))
-> \end{aligned}
-> $$
+> \end{aligned}$$
 
 There are two advantages of this method:
 1. **Minimally Invasive:** Since an objective function measures the deivation between nominal controller and new controller that satisfies the safety condition, 
@@ -446,13 +451,12 @@ There are two advantages of this method:
 Analogous to the safety-critical control, we can incorporate a control Lyapunov constraint into the QP to guarantee stability.
 
 **Q. Is the following construction (just add Lyapunov control directly) valid?**
-$$
-\begin{aligned}
+
+$$\begin{aligned}
 u^*(x) &=\underset{u\in\R^m}{\arg\min} \frac{1}{2}\lnm u-k(x) \rnm^2\\[1.4ex]
 &\text{s.t.}\q L_fh(x)+L_gh(x)u\geq -\al(h(x))\\
 &\text{s.t.}\q L_fV(x)+L_gV(x)u\geq -\gm(V(x))
-\end{aligned}
-$$
+\end{aligned}$$
 
 **A. NO. A conflict may arise between safety(CBF) and stability(CLF) constraints**, i.e. such a QP may be infeasible.
 
@@ -460,13 +464,12 @@ To resolve this, we need to introduce a relaxation variable $\delta$.
 
 > [!note] Safety-Stability QP (CBF-CLF QP)
 >
-> $$
-> \begin{aligned}
+> $$\begin{aligned}
 > u^*&(x) =\underset{u\in\R^m}{\arg\min}\left[\frac{1}{2}u^\T H(x) u + p\delta^2\right]\\[1.5ex]
 > &\text{s.t.}\q L_fh(x)+L_gh(x)u\geq -\al(h(x))\\
 > &\text{s.t.}\q L_fV(x)+L_gV(x)u\geq -\gm(V(x))+\delta
-> \end{aligned}
-> $$
+> \end{aligned}$$
+> 
 > where $H(x)$ is any positive definite matrix,
 > $\delta$ is a relaxation variable and
 > $p$ is a penalty coefficient for relaxation.
@@ -498,27 +501,31 @@ Specifically, most of the actuators have their own **physical limitations** we n
 > A function $\rho:D\to\R$ is called a **performance function** if it is a continuously differentiable function that defines the **allowable set of states $A$** as its superlevel set, i.e. $A=\{x\in D:\rho(x)\geq 0\}$.
 
 Recall the definition of <u>safe set</u>:
+
 $$\mathcal{C}=\{x\in D:h(x)\geq 0\}$$
 
 In some ideal cases, it may possible to take $h(x)=\rho(x)$, i.e. 
-$$
-\forall x\in A,\;\exists u\in U\q\text{s.t.}\q\dot\rho(x,u)\geq -\al(\rho(x))
-$$ 
+
+$$\forall x\in A,\;\exists u\in U\q\text{s.t.}\q\dot\rho(x,u)\geq -\al(\rho(x))$$
+
 Then, $\mathcal{C}=A$ and hence $A$ is forward invariant itself as well.
 
 However, forward invariance of $A$ cannot be achieved in general because:
 > [!example] Example) Invariance violation of $A$
 >
 > - **Case 1) Insufficient actuation limit**
-> 	- In many cases, $U$ is defined by 
-> 	$$
-> 	U=\{u\in\R^m:\lnm u\rnm\leq u_\max\}
-> 	$$
+> 	- In many cases, $U$ is defined by
+>  $$U=\{u\in\R^m:\lnm u\rnm\leq u_\max\}$$
+
 > 	- $\rho=h$ implies that $\rho$ is CBF and hence $A$ is forward invariant. So, by the definition of the set of all safe controllers([[#Def 2.4) Modern definition of Control Barrier Functions, Set of all safe controllers|definition 2.4]]), the set of control inputs that render $A$ invariant is
+> 	- 
 > 	$$K_{\rho}(x)=\{u\in \R^m: L_f\rho(x)+L_g\rho(x)u\geq-\al(\rho(x))\}$$
+
 > 	- However, $K_\rho(x)\cap U=\varnothing$ for some $x\in A$.
 > 		- Specifically, for $x$ near the boundary of $A$ (i.e. $x$ s.t. $\rho(x)\to 0^+$), for $u$ to make $A$ invariant, $u$ must satisfy
+> 	 - 
 > 			$$L_f\rho(x)+L_g\rho(x)u \geq \underbrace{-\al(\rho(x))\approx0}_{\al \in\\ \text{ extended class}\ \mathcal{K}_\infty}$$
+
 > 		- In this case, if $L_f\rho(x)\ll 0$, then, there may not exist $u\in U$ s.t. $L_f\rho(x)<L_g\rho(x)u$.
 > 	
 > - **Case 2) Dynamics with higher relative degree**
@@ -532,9 +539,12 @@ However, forward invariance of $A$ cannot be achieved in general because:
 > 	- Consider the perturbed system dynamics:
 > 		$$\dot x=f(x)+g(x)u+d(t)$$
 > 	where $d(t)\in\R^n$ is an unknown disturbance.
-> 	- Then, 
-> 		$$\dot \rho(x,u,d)=L_f\rho(x)+L_g\rho(x)u+\frac{\pp\rho}{\pp x}d(t)$$ 
+> 	- Then,
+>  
+> 		$$\dot \rho(x,u,d)=L_f\rho(x)+L_g\rho(x)u+\frac{\pp\rho}{\pp x}d(t)$$
+
 > 	- So, even if we choose $u$ satisfying $L_f\rho(x)+L_g\rho(x)u\geq-\al(\rho(x))$, a large negative disturbance can cause the violation, i.e.
+>  
 > 		$$L_f\rho(x)+L_g\rho(x)u+\frac{\pp\rho}{\pp x}d(t)<-\al(\rho(x))$$
 > 		
 > 		and this forces $A$ is not invariant. 
@@ -555,10 +565,9 @@ First, introduce a definition.
 > 
 > For any $t\geq 0$ and $x\in D$, the **nominal trajectory** $\phi_\be(t,x):\R_{\ge0}\times D\to D$ is defined by  the state of the control system $(*)$ at time $t$ when the nominal controller $\be$ is used as input and the system is initialized to $x$.
 > 
-> So, $\phi_\be(t,x)$ satisfies 
-> $$
-> \dot\phi_\be(t,x)=f(\phi_\be(t,x))+g(\phi_\be(t,x))\be(\phi_\be(t,x))
-> $$
+> So, $\phi_\be(t,x)$ satisfies
+> 
+> $$\dot\phi_\be(t,x)=f(\phi_\be(t,x))+g(\phi_\be(t,x))\be(\phi_\be(t,x))$$
 > with initial condition $\phi_\be(0,x)=x$.
 
 > [!warning] Warning
@@ -574,9 +583,8 @@ Now, the following theorem provides the way to construct a CBF satisfying $\math
 > Also, let $\be(x)$ be a nominal controller s.t. $f(x)+g(x)\be(x)$ is continuously differentiable.
 > 
 > Define $h:D\to\R$ as
-> $$
-> h(x):=\inf_{\tau\in[0,\infty)}\rho(\phi_\be(\tau,x))
-> $$
+> 
+> $$h(x):=\inf_{\tau\in[0,\infty)}\rho(\phi_\be(\tau,x))$$
 > and define $\mathcal{C}:=\{x\in D:h(x)\geq 0\}$.
 > 
 > Suppose that for each $x$ there exists a unique $x^*$ s.t. $h(x)=\rho(x^*)$ and $\phi_\be(\tau,x)=x^*$ for some $\tau\geq 0$. Then,
@@ -602,10 +610,10 @@ To overcome this issue, another approach is introduced.
 
 ##### Def 3.4) SOS polynomial
 
-> A polynomial $s(x)$ is called a sums of squares (SOS) polynomial if there exists a family  of polynomials $\{g_i(x)\}_{i\in [r]}$ s.t. 
-> $$
-> s(x)\sum_{i= 1}^r(g_i(x))^2
-> $$
+> A polynomial $s(x)$ is called a sums of squares (SOS) polynomial if there exists a family  of polynomials $\{g_i(x)\}_{i\in [r]}$ s.t.
+> 
+> $$s(x)\sum_{i= 1}^r(g_i(x))^2$$
+> 
 > Also, $\Sigma[x]$ denotes the set of all SOS polynomials.
 
 Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree polynomial and use SOS programming to enforce the required conditions on $h$.
