Fix formatting and clarity in CBF document
Corrected formatting issues and improved clarity in mathematical expressions throughout the document.

--- a/_posts/2026-02-04-CBF.md
+++ b/_posts/2026-02-04-CBF.md
@@ -272,7 +272,7 @@ Based on the argument above, we **do not need to explicitly construct** the feed
 
 > [!note] Key insight: Affine constraint
 > 
-> The inequality in $(**)$ is **affine in $u$**.
+> The inequality in (**) is **affine in $u$**.
 > 
 > - This is crucial because it allows us to **formulate the controller synthesis problem as an Optimization Problem** (e.g., Quadratic Program).
 
@@ -518,26 +518,32 @@ However, forward invariance of $A$ cannot be achieved in general because:
 >  $$U=\{u\in\R^m:\lnm u\rnm\leq u_\max\}$$
 
 > 	- $\rho=h$ implies that $\rho$ is CBF and hence $A$ is forward invariant. So, by the definition of the set of all safe controllers([[#Def 2.4) Modern definition of Control Barrier Functions, Set of all safe controllers|definition 2.4]]), the set of control inputs that render $A$ invariant is
-> 	- 
+> 	  
 > 	$$K_{\rho}(x)=\{u\in \R^m: L_f\rho(x)+L_g\rho(x)u\geq-\al(\rho(x))\}$$
 
 > 	- However, $K_\rho(x)\cap U=\varnothing$ for some $x\in A$.
 > 		- Specifically, for $x$ near the boundary of $A$ (i.e. $x$ s.t. $\rho(x)\to 0^+$), for $u$ to make $A$ invariant, $u$ must satisfy
-> 	 - 
+> 	   
 > 			$$L_f\rho(x)+L_g\rho(x)u \geq \underbrace{-\al(\rho(x))\approx0}_{\al \in\\ \text{ extended class}\ \mathcal{K}_\infty}$$
 
 > 		- In this case, if $L_f\rho(x)\ll 0$, then, there may not exist $u\in U$ s.t. $L_f\rho(x)<L_g\rho(x)u$.
 > 	
 > - **Case 2) Dynamics with higher relative degree**
 > 	- Let $\rho(x)$ has a relative degree $r$. If $r\geq 2$, then by the definition of  [[Nonlinear systems#Def) Relative degree|relative degree]],
+>  
 > 		$$\dot\rho(x)=\frac{\pp \rho}{\pp x}(f(x)+g(x)u)=L_f\rho(x)+\underbrace{L_g\rho(x)}_{=\;0}u=L_f\rho(x)$$
-> 	- So, the invariance conditions become state-dependent that is independent of $u$, i.e. 
+
+> 	- So, the invariance conditions become state-dependent that is independent of $u$, i.e.
+> 	  
 > 		$$L_f\rho(x)\geq -\al(\rho(x))$$
+
 > 	- In this case, we cannot choose proper $u\in U$. If the system enters a state $x_0\in A$ where $L_f\rho(x_0)<-\al(\rho(x_0))$, then  the condition is violated regardless of the control input.
 > 
 > - **Case 3) Dynamics with disturbances**
 > 	- Consider the perturbed system dynamics:
+>    
 > 		$$\dot x=f(x)+g(x)u+d(t)$$
+
 > 	where $d(t)\in\R^n$ is an unknown disturbance.
 > 	- Then,
 >  
@@ -568,6 +574,7 @@ First, introduce a definition.
 > So, $\phi_\be(t,x)$ satisfies
 > 
 > $$\dot\phi_\be(t,x)=f(\phi_\be(t,x))+g(\phi_\be(t,x))\be(\phi_\be(t,x))$$
+> 
 > with initial condition $\phi_\be(0,x)=x$.
 
 > [!warning] Warning
@@ -585,6 +592,7 @@ Now, the following theorem provides the way to construct a CBF satisfying $\math
 > Define $h:D\to\R$ as
 > 
 > $$h(x):=\inf_{\tau\in[0,\infty)}\rho(\phi_\be(\tau,x))$$
+> 
 > and define $\mathcal{C}:=\{x\in D:h(x)\geq 0\}$.
 > 
 > Suppose that for each $x$ there exists a unique $x^*$ s.t. $h(x)=\rho(x^*)$ and $\phi_\be(\tau,x)=x^*$ for some $\tau\geq 0$. Then,
@@ -622,31 +630,31 @@ Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree p
 
 > Given the control system $(*)$, assume both $f(x)$ and $g(x)$ are polynomials. Let $\rho(x)$ be a polynomial performance function and let $\be(x)$ be a polynomial nominal controller. 
 > 
-> A polynomial $h(x)$ is a CBF if there exists positive constants $a>0$, $\varepsilon>0$ and SOS polynomials $s_1(x),s_2(x)$ s.t. 
-> $$
-> \begin{aligned}
+> A polynomial $h(x)$ is a CBF if there exists positive constants $a>0$, $\varepsilon>0$ and SOS polynomials $s_1(x),s_2(x)$ s.t.
+> 
+> $$\begin{aligned}
 > -h(x)-\varepsilon+s_1(x)\rho(x)\in\Sigma[x]\q&\cdots\q (1)\\[1.3ex]
 > L_fh(x)+L_gh(x)\be(x)+ah(x)-s_2(x)h(x)\in\Sigma[x]\q&\cdots\q (2)
-> \end{aligned}
-> $$
+> \end{aligned}$$
+> 
 > Moreover, $\mathcal{C}\subseteq A$ and $\be(x)\in K_\text{cbf}$ for all $x\in\mathcal{C}$.
 
 > [!note] Q. What are the equations $(1)$ and $(2)$ mean?
 > 
 > **Claim 1:** If $(1)$, then $\mathcal{C}\subset A$.
 > 
-> **Proof)** Suppose that $-h(x)-\varepsilon+s_1(x)\rho(x)\in\Sigma[x]$. Then, $\exists\sigma(x)\in\Sigma[x]$ s.t. 
-> $$
-> -h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)
-> $$
+> **Proof)** Suppose that $-h(x)-\varepsilon+s_1(x)\rho(x)\in\Sigma[x]$. Then, $\exists\sigma(x)\in\Sigma[x]$ s.t.
+> 
+> $$-h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)$$
+> 
 > Since $\sigma(x)$ is SOS, $\sigma(x)\geq 0$ for all $x\in D$ and hence we have
-> $$
-> -h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)\geq 0\\[1.2ex]
-> $$
+>
+> $$-h(x)-\varepsilon+s_1(x)\rho(x)=\sigma(x)\geq 0\\[1.2ex]$$
+> 
 > By arranging terms properly,
-> $$
-> h(x)\leq s_1(x)\rho(x)-\varepsilon-\sigma(x)
-> $$
+>
+> $$h(x)\leq s_1(x)\rho(x)-\varepsilon-\sigma(x)$$
+> 
 > and since $s_1(x)$ is SOS, $s_1(x)\geq 0$ for all $x\in D$ and hence $h(x)<0$ if $\rho(x)<0$.
 > 
 > Here, $\rho(x)<0$ and $h(x)<0$ implies that $x\notin A$ and $x\notin \mathcal{C}$, respectively and hence we can conclude that if $(1)$ is true, then $D\setminus A\subseteq D\setminus\mathcal{C}$. 
@@ -656,19 +664,23 @@ Using this definition, we can compute $h$ by parametrizing $h$ as fixed degree p
 > ---
 > **Claim 2:** If $(2)$, then $\be(x)\in K_\text{cbf}(x)$.
 > 
-> **Proof)** Suppose that $L_fh(x)+L_gh(x)\be(x)+ah(x)-s_2(x)h(x)\in\Sigma[x]$, i.e. $\exists\sigma(x)\in\Sigma[x]$ s.t. 
-> $$
-> \underbrace{L_fh(x)+L_gh(x)\be(x)}_{\dot h(x,\be(x))}+\underbrace{ah(x)}_{\al(h(x))}-\underbrace{s_2(x)h(x)}_{\text{relaxation}}=\sigma(x)\geq 0
-> $$
+> **Proof)** Suppose that $L_fh(x)+L_gh(x)\be(x)+ah(x)-s_2(x)h(x)\in\Sigma[x]$, i.e. $\exists\sigma(x)\in\Sigma[x]$ s.t.
+> 
+> $$\underbrace{L_fh(x)+L_gh(x)\be(x)}_{\dot h(x,\be(x))}+\underbrace{ah(x)}_{\al(h(x))}-\underbrace{s_2(x)h(x)}_{\text{relaxation}}=\sigma(x)\geq 0$$
+> 
 > Here, as we can see above, 
 > - The first two terms $L_fh(x)+L_gh(x)\be(x)$ is the time derivative of $h$ when the nominal controller $\be(x)$ is applied, i.e. $\dot h(x,\be(x))$.
 > - The third term $ah(x)$ is $\al(h(x))$ where $\al(\cdot)\in\mathcal{K}_\infty$ is linear, i.e. $\al(s)=as$.
 > - Since $s_2(x)$ is SOS, $s_2(x)\geq 0$ for all $x\in D$ and hence the fourth term $s_2(x)h(x)\geq 0$ for all $x\in\mathcal{C}$. So, this can be utilized as a relaxation term.
 > 
 > So, for all $x\in\mathcal{C}$, since both $s_2(x)h(x)$ and $\sigma(x)$ are nonnegative,
+> 
 > $$L_fh(x)+L_gh(x)\be(x)+ah(x)\geq s_2(x)h(x)+\sigma(x)\geq 0$$
+> 
 > and hence
+> 
 > $$L_fh(x)+L_gh(x)\be(x)\geq -ah(x)$$
+> 
 > This implies that $h$ is CBF and $\be(x)\in K_\text{cbf}(x)$.<span style="float: right;">$\square$</span>
 
 In short,
@@ -714,16 +726,15 @@ To overcome this issue, we'll introduce **Exponential CBFs** that allows for us 
 First, recall the definition [[Nonlinear systems#Def) Relative degree|relative degree]].
 
 > Given a CBF $h(x,u)$, its $k^\th$ derivative be
-> $$
-> h^{(k)}(x,u)=L_f^k h(x)+L_gL_f^{k-1}h(x)u
-> $$
+> 
+> $$h^{(k)}(x,u)=L_f^k h(x)+L_gL_f^{k-1}h(x)u$$
+> 
 > In this context, $h(x,u)$ is said to have relative degree $r$ if
-> $$
-> \begin{aligned}
+>
+> $$\begin{aligned}
 > L_gL_f^{k-1}h(x)&=0,\q\forall k\in\{0,1,\cdots, r-2\}\\
 > L_gL_f^{r-1}h(x)&\neq0
-> \end{aligned}
-> $$
+> \end{aligned}$$
 
 Using this definition, prepare some critical setup for defining Exponential CBF.
 
@@ -731,8 +742,8 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 >
 > 
 > **Claim:** Here, by defining a barrier state vector corresponding to a CBF $h(x,u)$ with relative degree $r$ by
-> $$
-> \eta_b(x):=
+> 
+> $$\eta_b(x):=
 > \begin{bmatrix}
 > h(x) \\
 > \dot h(x) \\
@@ -746,18 +757,18 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 > L_f^2 h(x) \\
 > \vdots \\
 > L_f^{(r-1)} h(x)
-> \end{bmatrix}\in\R^r
-> $$
+> \end{bmatrix}\in\R^r$$
+> 
 > and letting $\mu:=h^{(r)}(x,u)=L_f^{r}h(x)+L_gL_f^{r-1}h(x)u$, we can obtain a system of first-order differential equations
-> $$
-> \begin{aligned}
+>
+> $$\begin{aligned}
 > \dot\eta_b(x)&=F\eta_b(x)+G\mu\\[1.2ex]
 > h(x)&=C\eta_b(x)
-> \end{aligned}
-> $$
+> \end{aligned}$$
+> 
 > where 
-> $$
-> F=\left[\;
+>
+> $$F=\left[\;
 > \begin{array}{c|c}
 > \mathbf{0}_{r-1} & I_{r-1}\\[1.05ex] \hline
 > 0 & \mathbf{0}^\T_{r-1}
@@ -771,17 +782,16 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 > C=
 > \begin{bmatrix}
 > 1 & \mathbf{0}_{r-1}^\T
-> \end{bmatrix}\in\R^{r}
-> $$
+> \end{bmatrix}\in\R^{r}$$
+> 
 > Also, by assuming a state-feedback controller $\mu=-K_\al\eta_b(x)$, then we 
-> $$
-> h(x(t))=Ce^{(F-GK_\al)}\eta_b(x_0)
-> $$
+>
+> $$h(x(t))=Ce^{(F-GK_\al)}\eta_b(x_0)$$
 > 
 > ---
 > **Proof)** First, by multiplying two matrices,
-> $$
-> F\eta_b(x)
+>
+> $$F\eta_b(x)
 > =\left[ \begin{array}{c|cccc} 0 & 1 & 0 & \cdots & 0 \\ 0 & 0 & 1 & \cdots & 0 \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 0 & 0 & 0 & \cdots & 1 \\ \hline 0 & 0 & 0 & \cdots & 0 \end{array} \right]
 > \begin{bmatrix}
 > h(x) \\
@@ -796,11 +806,11 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 > \vdots \\
 > h^{(r-1)}(x) \\
 > 0
-> \end{bmatrix}
-> $$
+> \end{bmatrix}$$
+> 
 > So,
-> $$
-> \dot\eta_b(x)=
+>
+> $$\dot\eta_b(x)=
 > \begin{bmatrix}
 > \dot h(x) \\
 > \ddot h(x) \\
@@ -824,28 +834,28 @@ Using this definition, prepare some critical setup for defining Exponential CBF.
 > 0 \\
 > h^{(r)}(x)
 > \end{bmatrix}}_{G\mu}
-> =F\eta_b(x)+G\mu
-> $$
+> =F\eta_b(x)+G\mu$$
 > 
-> Here, recall that 
-> $$
-> h^{(r)}(x,u)=L_f^rh(x)+L_gL_f^{r-1}h(x)u\overset{\text{let}}{=}:\mu
-> $$
+> Here, recall that
+> 
+> $$h^{(r)}(x,u)=L_f^rh(x)+L_gL_f^{r-1}h(x)u\overset{\text{let}}{=}:\mu$$
 > 
 > Assume that we apply state-feedback controller, i.e. $\mu=-K_\al\eta_b(x)$.
 > By substituting this to the system of first-order differential equations, we obtain
-> $$
-> \begin{aligned}
+> 
+> $$\begin{aligned}
 > \dot\eta_b(x)&=F\eta_b(x)+G(-K_\al\eta_b(x))\\[1.2ex]
 > &=(F-GK_\al)\eta_b(x)
-> \end{aligned}
-> $$
+> \end{aligned}$$
+> 
 > Here, $\dot\eta_b(x)=(F-GK_\al)\eta_b(x)$ is just a simple linear LTI first-order ODE of the form $\dot x=Ax$ and hence
+>
 > $$\eta_b(x(t))=\eta_b(x_0)e^{(F-GK_\al)t}$$
+>
 > Therefore, since $h(x(t))=C\eta_b(x)$, 
-> $$
-> h(x(t))=C\eta_b(x_0)e^{(F-GK_\al)t}
-> $$
+>
+> $$h(x(t))=C\eta_b(x_0)e^{(F-GK_\al)t}$$
+> 
 > Moreover, by the [[#Lem 2.1) Comparison lemma|comparison lemma]], if $\mu\geq -K_\al\eta_b(x)$, then $h(x(t))\geq Ce^{(F-GK_\al)}\eta_b(x_0)$. <span style="float: right;">$\square$</span>
 
 We now can define exponential CBF.
@@ -853,19 +863,18 @@ We now can define exponential CBF.
 ##### Def 4.1) Exponential Control Barrier Function
 
 > Given a set $\mathcal{C}\subset D\subset\R^n$ defined by
-> $$
-> \mathcal{C}:=\{x\in D:h(x)\geq 0\}
-> $$
+> 
+> $$\mathcal{C}:=\{x\in D:h(x)\geq 0\}$$
+> 
 > where $h:D\to\R$ is $C^r$ function, then $h$ is called an **exponential control barrier function** if there exists a row vector $K_\al\in\R^r$ s.t. for control system $\dot x=f(x)+g(x)u$,
-> $$
-> \sup_{u\in U}\left[L_f^rh(x)+L_gL_f^{r-1}h(x)u\right]\geq-K_\al\eta_b(x)\q\forall x\in \text{Int}\ \mathcal{C}
-> $$
+>
+> $$\sup_{u\in U}\left[L_f^rh(x)+L_gL_f^{r-1}h(x)u\right]\geq-K_\al\eta_b(x)\q\forall x\in \text{Int}\ \mathcal{C}$$
+> 
 > results in $h(x(t))\geq Ce^{(F-GK_\al)t}\eta_b(x_0)\geq 0$ whenever $h(x_0)\geq 0$.
 
 Intuitively, this implies that the actual input $\mu$ is greater than the assumed state feedback $-K_\al\eta_b(x)$, i.e.
-$$
-\underbrace{L_f^rh(x)+L_gL_f^{r-1}h(x)u}_{\text{actual input}}\geq\underbrace{-K_\al\eta_b(x)}_{\text{reference input}}
-$$
+
+$$\underbrace{L_f^rh(x)+L_gL_f^{r-1}h(x)u}_{\text{actual input}}\geq\underbrace{-K_\al\eta_b(x)}_{\text{reference input}}$$
 
 Now, recall the motivation of ECBF:
 $\to$ Generalize the definition of CBF to the systems with higher relative degree.
@@ -880,14 +889,13 @@ Moreover, ECBF can be directly incorporated to the optimization-based control in
 
 
 > [!note] CLF-ECBF QP
-> $$
-> \begin{aligned}
+> 
+> $$\begin{aligned}
 > u(x)= \operatorname*{argmin}_{(u,\mu,\de)\in\R^{m+2}} & \frac{1}{2}u^\T H(x)u+p\delta^2\\[1.2ex]
 > \text{s.t.}\q & L_fV(x)+L_gV(x)u\leq -\gamma(V(x))+\delta\\[1.1ex]
 > & L_f^rh(x)+L_gL_f^{r-1}h(x)u=\mu\\[1.1ex]
 > & \mu\geq -K_\al\eta_b(x)
-> \end{aligned}
-> $$
+> \end{aligned}$$
 
 <div style="height: 0.1em;"></div>
 
@@ -896,39 +904,43 @@ Moreover, ECBF can be directly incorporated to the optimization-based control in
 
 
 Observe that the dynamics 
-$$
-\begin{aligned}
+
+$$\begin{aligned}
 \dot\eta_b(x)&=F\eta_b(x)+G\mu\\[1.2ex]
 h(x)&=C\eta_b(x)
-\end{aligned}
-$$
+\end{aligned}$$
+
 is the **controllable canonical form**.
 So, by letting $K_\al=\begin{bmatrix}\al_1 & \al_2 & \cdots & \al_r\end{bmatrix}$, we can obtain
-$$
-F-GK_\al=
+
+$$F-GK_\al=
 \begin{bmatrix}
 0 & 1 & 0 & \cdots & 0 \\
 0 & 0 & 1 & \cdots & 0 \\
 \vdots & \vdots & \vdots & \ddots & \vdots \\
 0 & 0 & 0 & \cdots & 1 \\
 -\al_1 & -\al_2 & -\al_3 & \cdots & -\al_r
-\end{bmatrix}
-$$
+\end{bmatrix}$$
+
 and hence the characteristic polynomial of $F-GK_\al$ be
+
 $$\lambda^r+\al_r\lambda^{r-1}+\cdots+\al_2\lambda+\al=0$$
+
 Here, suppose that such a polynomial be factored as 
+
 $$(\lambda+p_1)(\lambda+p_2)\cdots(\lambda+p_r)=0,$$
+
 i.e. $-p_1,\cdots, -p_r$ are the eigenvalues(poles) of the closed-loop system.
 
 Next, define an auxiliary family of function $\{\nu_i\}_{i\in I}$ where $\nu_i:D\to\R$ for all $i\in I$ and their corresponding superlevel sets $\mathcal{C}_i=\{x\in D:\nu_i(x)\geq 0\}$ as follows.
-$$
-\begin{aligned}
+
+$$\begin{aligned}
 \nu_0(x)&=h(x);\qquad\q\q\q\q\;\;\;\q\;\;\mathcal{C}_0=\{x\in D:\nu_0(x)\geq 0\}=\mathcal{C}\\[1.1ex]
 \nu_1(x)&=\dot\nu_0(x)+p_1\nu_0(x);\qquad\q\;\;\mathcal{C}_1=\{x\in D:\nu_1(x)\geq 0\}\\[1.1ex]
 &\;\;\vdots\qquad\qquad\qquad\qquad\qquad\qquad\;\;\; \vdots \\[1.1ex]
 \nu_r(x)&=\dot\nu_{r-1}(x)+p_r\nu_{r-1}(x);\qquad\mathcal{C}_r=\{x\in D:\nu_r(x)\geq 0\}
-\end{aligned}
-$$
+\end{aligned}$$
+
 Our goal is to design $K_\al$ to ensure $\mathcal{C}$ is forward invariant. 
 
 First, begin with the following basic and straightforward result.
@@ -937,11 +949,18 @@ First, begin with the following basic and straightforward result.
 
 > For a given $i\in[r]$, if $\mathcal{C}_i$ is forward invariant, then $\mathcal{C}_{i-1}$ is forward invariant whenever $p_i>0$ and $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$.
 
-**Proof)** Since $\mathcal{C}_i$ is forward invariant, for a given $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$, $x(t)\in\mathcal{C}_i$ for all $t\in[0,\infty)$, i.e. $$\nu_i(x(t))\geq 0,\q\forall t\in[0,\infty)$$
+**Proof)** Since $\mathcal{C}_i$ is forward invariant, for a given $x_0\in\mathcal{C}_i\cap\mathcal{C}_{i-1}$, $x(t)\in\mathcal{C}_i$ for all $t\in[0,\infty)$, i.e. 
+
+$$\nu_i(x(t))\geq 0,\q\forall t\in[0,\infty)$$
+
 By the definition of $\nu_i(x)$, 
+
 $$\nu_i(x)=\dot\nu_{i-1}(x)+p_i\nu_{i-1}(x)\geq 0$$
+
 This implies that for $x\to\pp\mathcal{C}_{i-1}$, i.e. $\nu_{i-1}(x)\to 0^+$, then 
+
 $$\nu_i(x)=\dot\nu_{i-1}(x)+\underbrace{p_i\nu_{i-1}(x)}_{\to\; 0^+}\approx\dot\nu_{i-1}(x)\geq 0$$
+
 Thus, $\mathcal{C}_{i-1}$ is forward invariant as well. <span style="float: right;">$\square$</span>
 
 <div style="height: 0.1em;"></div>
@@ -970,13 +989,18 @@ Q. What is the meaning of these conditions?
 > **2. $x_0\in \mathcal{C}_i$ for each $i\in[r]$**
 > 
 > $\to$ Since $x_0\in\mathcal{C}_i$ implies $\nu_i(x_0)=\dot\nu_{i-1}(x_0)+p_i\nu_{i-1}(x)\geq 0$, we obtain the lower bound for $p_i$.
+> 
 >	$$p_i\geq-\frac{\dot\nu_{i-1}(x_0)}{\nu_{i-1}(x_0)}$$
+> 
 >This provides the condition for $p_i$ corresponds to $x_0$ that means ==the required response rate depends on $x_0$.==
 
 Finally, we can guarantee the existence of ECBF using these conditions.
 ##### Thm 4.4) Conditions for choosing Proper gain matrix
 
-> Suppose $K_\al$ is chosen s.t. $F-GK_\al$ is Hurwitz and total negative(resulting in negative real poles) and the eigenvalues satisfy $$\lambda_i(F-GK_\al)\geq -\frac{\dot\nu_{i-1}(x_0)}{\nu_{i-1}(x_0)},$$then $\mu\geq -K_\al\eta_b(x)$ guarantees $h(x)$ is an exponential CBF.
+> Suppose $K_\al$ is chosen s.t. $F-GK_\al$ is Hurwitz and total negative(resulting in negative real poles) and the eigenvalues satisfy
+>
+> $$\lambda_i(F-GK_\al)\geq -\frac{\dot\nu_{i-1}(x_0)}{\nu_{i-1}(x_0)},$$then $\mu\geq -K_\al\eta_b(x)$ guarantees $h(x)$ is an exponential CBF.
 
 This theorem provides a sufficient conditions for the existence of ECBF, i.e. 
+
 $$K_\al\text{ satisfies theorem 4.4 }\Longrightarrow\; h(x)\text{ be ECBF if }\;\mu\geq-K_\al\eta_b(x_0)$$
